Webgoat last update changed lesson structure, save before modif

--- a/wiki_owasp_webgoat_intro.html
+++ b/wiki_owasp_webgoat_intro.html
@@ -1,109 +1,144 @@
-<span class="multilang" lang="fr"><u>Objectifs :</u></span>
-<span class="multilang" lang="en"><u>Objectives:</u></span>
+<div>
+	<span class="multilang" lang="fr"><u>Objectifs :</u></span>
+	<span class="multilang" lang="en"><u>Objectives:</u></span>
 
-<div><br></div>
+	<div><br></div>
 
-<ul>
-    <li>
-        <span class="multilang" lang="fr">
-        Comprendre le protocole HTTP.
-      </span>
-        <span class="multilang" lang="en">
-        Learn the HTTP protocol.
-      </span>
-    </li>
-    <li>
-        <span class="multilang" lang="fr">
-      	Découvrir les principales failles web.
-      </span>
-        <span class="multilang" lang="en">
-      	Learn the top web vulnerabilities.
-      </span>
-    </li>
-</ul>
-
-<div><br></div>
-<div><br></div>
-
-<span class="multilang" lang="fr"><u>Durée :</u></span>
-<span class="multilang" lang="en"><u>Duration:</u></span>
-<div><br></div>
-<span class="multilang" lang="fr">En fonction des objectifs, des aides apportées par le manager de session, et des connaissances des apprenants, la durée estimée peut aller d'un jour à une semaine complète.</span>
-<span class="multilang" lang="en">Depending on the objectives, the help provided by the session manager, and the knowledge of the learners, the estimated duration can range from one day to a full week.</span>
+	<ul>
+		<li>
+			<span class="multilang" lang="fr">
+			Comprendre le protocole HTTP.
+		  </span>
+			<span class="multilang" lang="en">
+			Learn the HTTP protocol.
+		  </span>
+		</li>
+		<li>
+			<span class="multilang" lang="fr">
+			Découvrir les principales failles web.
+		  </span>
+			<span class="multilang" lang="en">
+			Learn the top web vulnerabilities.
+		  </span>
+		</li>
+	</ul>
+</div>
 
 <div><br></div>
 <div><br></div>
 
-<span class="multilang" lang="fr"><u>Pré-requis :</u></span>
-<span class="multilang" lang="en"><u>Requirements:</u></span>
+<div>
+	<span class="multilang" lang="fr"><u>Durée :</u></span>
+	<span class="multilang" lang="en"><u>Duration:</u></span>
+
+	<div><br></div>
+
+	<span class="multilang" lang="fr">En fonction des objectifs, des aides apportées par le manager de session, et des connaissances des apprenants, la durée estimée peut aller d'un jour à une semaine complète.</span>
+	<span class="multilang" lang="en">Depending on the objectives, the help provided by the session manager, and the knowledge of the learners, the estimated duration can range from one day to a full week.</span>
+</div>
 
 <div><br></div>
-
-<ul>
-    <li>
-        <span class="multilang" lang="fr">
-        Connaitre les principes de base d'un proxy web (OWASP ZAP, Burp Suite ...) ou des outils de développements d'un navigateur Web.
-      </span>
-        <span class="multilang" lang="en">
-        Knowing how to use a Web proxy (OWASP ZAP, Burp Suite ...) or the development tools from a Web browser.
-      </span>
-    </li>
-    <li>
-        <span class="multilang" lang="fr">
-      	Des bases de Python pour quelques challenges nécessitant un peu de <i>scripting</i>.
-      </span>
-        <span class="multilang" lang="en">
-      	Python basis for some challenges that need a bit of scripting.
-      </span>
-    </li>
-</ul>
-
 <div><br></div>
 
-<span class="multilang" lang="fr">Programmation :</span>
-<span class="multilang" lang="en">Programmation:</span>
-<a href="https://www.python.org/downloads/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/792873528/python-logo.png" title="Python" alt="Python" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-<div><br></div>
-<span class="multilang" lang="fr">Proxy Web :</span>
-<span class="multilang" lang="en">Web Proxy:</span>
-<a href="https://github.com/zaproxy/zaproxy/wiki/Downloads"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/875540107/owasp-zap-logo.png" title="OWASP ZAP" alt="OWASP ZAP" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-<a href="https://portswigger.net/burp/communitydownload"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/360150702/burp-suite-logo.jpg" title="Burp Suite" alt="Burp Suite" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-<div><br></div>
-<span class="multilang" lang="fr">Navigateur Web :</span>
-<span class="multilang" lang="en">Web Browser:</span>
-<a href="https://www.mozilla.org/fr/firefox/new/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/947984321/mozilla-firefox-logo.png" title="Mozilla Firefox" alt="Mozilla Firefox" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-<a href="https://www.google.com/intl/fr_fr/chrome/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/809846978/google-chrome-logo.png" title="Google Chrome" alt="Google Chrome" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-<a href ="https://www.microsoft.com/fr-fr/windows/microsoft-edge"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/396762205/microsoft-edge-logo.png" title="Microsoft Edge" alt="Microsoft Edge" class="atto_image_button_text-bottom" width="40" height="40"></a>
-<a href="https://www.opera.com/fr"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/658432968/opera-logo.png" title="Opera" alt="Opera" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-<a href="https://brave.com/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/293792279/brave-logo.png" title="Brave" alt="Brave" class="img-responsive atto_image_button_text-bottom" width="40" height="47"></a>
-<a href="https://www.apple.com/fr/safari/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/453702506/safari-logo.png" title="Safari" alt="Safari" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+<div>
+	<span class="multilang" lang="fr"><u>Pré-requis :</u></span>
+	<span class="multilang" lang="en"><u>Requirements:</u></span>
+
+	<div><br></div>
+	
+	<ul>
+		<li>
+			<span class="multilang" lang="fr">
+			Connaitre les bases de fonctionnement d'un site web.
+		  </span>
+			<span class="multilang" lang="en">
+			Knowing how a website works.
+		  </span>
+		</li>
+		<li>
+			<span class="multilang" lang="fr">
+			Connaitre les principes de base d'un proxy web (OWASP ZAP, Burp Suite ...) ou des outils de développements d'un navigateur web.
+		  </span>
+			<span class="multilang" lang="en">
+			Knowing how to use a web proxy (OWASP ZAP, Burp Suite ...) or the development tools from a web browser.
+		  </span>
+		</li>
+		<li>
+			<span class="multilang" lang="fr">
+			Des bases de Python pour quelques challenges nécessitant un peu de <i>scripting</i>.
+		  </span>
+			<span class="multilang" lang="en">
+			Python basis for some challenges that need a bit of scripting.
+		  </span>
+		</li>
+	</ul>
+</div>
 
 <div><br></div>
-
-<span class="multilang" lang="fr"><u>Ressources :</u></span>
-<span class="multilang" lang="en"><u>Ressources:</u></span>
-
 <div><br></div>
 
-<ul>
-    <li>
-        <span class="multilang" lang="fr">
-        Standard HTML 5 <a href="https://www.w3.org/TR/html52/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/74389857/html5-logo.png" title="HTML 5" alt="HTML 5" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-      </span>
-        <span class="multilang" lang="en">
-        Standard HTTP <a href="https://tools.ietf.org/html/rfc7230"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/837652539/http-logo.png" title="HTTP" alt="HTTP" class="img-responsive atto_image_button_text-bottom" width="78" height="40"></a>
+<div>
+	<span class="multilang" lang="fr"><u>Outils :</u></span>
+	<span class="multilang" lang="en"><u>Tools:</u></span>
 
-      </span>
-    </li>
-    <li>
-        <span class="multilang" lang="en">
-        HTML 5 standard <a href="https://www.w3.org/TR/html52/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/74389857/html5-logo.png" title="HTML 5" alt="HTML 5" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
-      </span>
-        <span class="multilang" lang="en">
-        HTTP standard <a href="https://tools.ietf.org/html/rfc7230"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/837652539/http-logo.png" title="HTTP" alt="HTTP" class="img-responsive atto_image_button_text-bottom" width="78" height="40"></a>
-      </span>
-    </li>
-</ul>
+	<div><br></div>
+	
+	<ul>
+		<li>	
+			<span class="multilang" lang="fr">Programmation</span>
+			<span class="multilang" lang="en">Programmation</span>
+			<a href="https://www.python.org/downloads/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/792873528/python-logo.png" title="Python" alt="Python" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+
+		</li>
+		<li>
+			<span class="multilang" lang="fr">Proxy Web</span>
+			<span class="multilang" lang="en">Web Proxy</span>
+			<a href="https://github.com/zaproxy/zaproxy/wiki/Downloads"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/875540107/owasp-zap-logo.png" title="OWASP ZAP" alt="OWASP ZAP" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+			<a href="https://portswigger.net/burp/communitydownload"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/360150702/burp-suite-logo.jpg" title="Burp Suite" alt="Burp Suite" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+		</li>
+		<li>
+			<span class="multilang" lang="fr">Navigateur Web</span>
+			<span class="multilang" lang="en">Web Browser</span>
+			<a href="https://www.mozilla.org/fr/firefox/new/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/947984321/mozilla-firefox-logo.png" title="Mozilla Firefox" alt="Mozilla Firefox" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+			<a href="https://www.google.com/intl/fr_fr/chrome/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/809846978/google-chrome-logo.png" title="Google Chrome" alt="Google Chrome" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+			<a href ="https://www.microsoft.com/fr-fr/windows/microsoft-edge"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/396762205/microsoft-edge-logo.png" title="Microsoft Edge" alt="Microsoft Edge" class="atto_image_button_text-bottom" width="40" height="40"></a>
+			<a href="https://www.opera.com/fr"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/658432968/opera-logo.png" title="Opera" alt="Opera" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+			<a href="https://brave.com/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/293792279/brave-logo.png" title="Brave" alt="Brave" class="img-responsive atto_image_button_text-bottom" width="34" height="40"></a>
+			<a href="https://www.apple.com/fr/safari/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/453702506/safari-logo.png" title="Safari" alt="Safari" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+		</li>
+	</ul>
+</div>
+	
+<div><br></div>
+<div><br></div>
+
+<div>
+	<span class="multilang" lang="fr"><u>Ressources :</u></span>
+	<span class="multilang" lang="en"><u>Ressources:</u></span>
+
+	<div><br></div>
+
+	<ul>
+		<li>
+			<span class="multilang" lang="fr">
+			Standard HTML 5 
+			</span>
+			<span class="multilang" lang="en">
+			HTML 5 standard
+			</span>
+			<a href="https://www.w3.org/TR/html52/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/74389857/html5-logo.png" title="HTML 5" alt="HTML 5" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+		</li>
+		<li>
+			<span class="multilang" lang="fr">
+			Standard HTTP 
+			</span>
+			<span class="multilang" lang="en">
+			HTTP standard 
+			</span>			
+			<a href="https://tools.ietf.org/html/rfc7230"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/837652539/http-logo.png" title="HTTP" alt="HTTP" class="img-responsive atto_image_button_text-bottom" width="78" height="40"></a>
+		</li>
+	</ul>
+</div>
 
 <div><br></div>
 <div><br></div>
