--- a/wiki_owasp_webgoat_intro.html
+++ b/wiki_owasp_webgoat_intro.html
@@ -33,8 +33,8 @@
 
 	<div><br></div>
 
-	<span class="multilang" lang="fr">En fonction des objectifs, des aides apportées par le manager de session, et des connaissances des apprenants, la durée estimée peut aller d'un jour à une semaine complète.</span>
-	<span class="multilang" lang="en">Depending on the objectives, the help provided by the session manager, and the knowledge of the learners, the estimated duration can range from one day to a full week.</span>
+	<span class="multilang" lang="fr">En fonction des objectifs, des aides apportées par le manager de session, et des connaissances des apprenants, la durée estimée peut aller d'<b>un jour</b> à <b>une semaine complète</b>.</span>
+	<span class="multilang" lang="en">Depending on the objectives, the help provided by the session manager, and the knowledge of the learners, the estimated duration can range from <b>one day</b> to a <b>full week</b>.</span>
 </div>
 
 <div><br></div>
@@ -72,6 +72,22 @@
 		  </span>
 		</li>
 	</ul>
+	
+	<div><br></div>
+	
+	<span class="multilang" lang="fr">
+	Difficulté :
+	</span>
+	<span class="multilang" lang="en">
+	Difficulty:
+	</span>
+	
+	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/292785791/star-yellow.png" alt="Star Yellow" class="img-responsive atto_image_button_text-bottom" width="24" height="24">
+	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24">
+	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24">
+	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24">
+	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24">
+
 </div>
 
 <div><br></div>
@@ -91,20 +107,25 @@
 
 		</li>
 		<li>
-			<span class="multilang" lang="fr">Proxy Web</span>
-			<span class="multilang" lang="en">Web Proxy</span>
+			<span class="multilang" lang="fr">Proxy web</span>
+			<span class="multilang" lang="en">Web proxy</span>
 			<a href="https://github.com/zaproxy/zaproxy/wiki/Downloads"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/875540107/owasp-zap-logo.png" title="OWASP ZAP" alt="OWASP ZAP" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
 			<a href="https://portswigger.net/burp/communitydownload"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/360150702/burp-suite-logo.jpg" title="Burp Suite" alt="Burp Suite" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
 		</li>
 		<li>
-			<span class="multilang" lang="fr">Navigateur Web</span>
-			<span class="multilang" lang="en">Web Browser</span>
+			<span class="multilang" lang="fr">Navigateur web</span>
+			<span class="multilang" lang="en">Web browser</span>
 			<a href="https://www.mozilla.org/fr/firefox/new/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/947984321/mozilla-firefox-logo.png" title="Mozilla Firefox" alt="Mozilla Firefox" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
 			<a href="https://www.google.com/intl/fr_fr/chrome/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/809846978/google-chrome-logo.png" title="Google Chrome" alt="Google Chrome" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
 			<a href ="https://www.microsoft.com/fr-fr/windows/microsoft-edge"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/396762205/microsoft-edge-logo.png" title="Microsoft Edge" alt="Microsoft Edge" class="atto_image_button_text-bottom" width="40" height="40"></a>
 			<a href="https://www.opera.com/fr"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/658432968/opera-logo.png" title="Opera" alt="Opera" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
 			<a href="https://brave.com/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/293792279/brave-logo.png" title="Brave" alt="Brave" class="img-responsive atto_image_button_text-bottom" width="34" height="40"></a>
 			<a href="https://www.apple.com/fr/safari/"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/453702506/safari-logo.png" title="Safari" alt="Safari" class="img-responsive atto_image_button_text-bottom" width="40" height="40"></a>
+		</li>
+		<li>
+			<span class="multilang" lang="fr">Editeur de texte</span>
+			<span class="multilang" lang="en">Text Editor</span>
+			<a href="https://notepad-plus-plus.org/download/v7.7.1.html"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/831186726/notepad.png" alt="Notepad++" class="img-responsive atto_image_button_text-bottom" width="56" height="40"></a>
 		</li>
 	</ul>
 </div>
