--- a/wiki_owasp_webgoat_intro.html
+++ b/wiki_owasp_webgoat_intro.html
@@ -72,15 +72,14 @@
 		  </span>
 		</li>
 	</ul>
-	
-	<div><br></div>
-	
-	<span class="multilang" lang="fr">
-	Difficulté :
-	</span>
-	<span class="multilang" lang="en">
-	Difficulty:
-	</span>
+</div>
+
+<div><br></div>
+<div><br></div>
+
+<div>
+	<span class="multilang" lang="fr"><u>Difficulté :</u></span>
+	<span class="multilang" lang="en"><u>Difficulty:</u></span>
 	
 	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/292785791/star-yellow.png" alt="Star Yellow" class="img-responsive atto_image_button_text-bottom" width="24" height="24"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24"><img src="http://moodle.beware.lan/draftfile.php/132/user/draft/924212666/star-empty2.png" alt="Star Empty" class="img-responsive atto_image_button_text-bottom" width="24" height="24">
 
