--- a/wiki_owasp_webgoat.html
+++ b/wiki_owasp_webgoat.html
@@ -1670,7 +1670,7 @@
 		</li>
 	</ul>
 	<div><br></div>
-	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/349327222/xxe-3.png" alt="XXE 3" class="img-responsive atto_image_button_text-bottom" width="800" height="325">Introduction:</b>
+	<img src="http://moodle.beware.lan/draftfile.php/132/user/draft/349327222/xxe-3.png" alt="XXE 3" class="img-responsive atto_image_button_text-bottom" width="800" height="325">
 	<div><br></div>
 	4.
 	<br>
